tests/ui/issues/issue-16562.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-16562.rs:10:6
   |
LL | impl<T, M: MatrixShape> Collection for Col<M, usize> {
   |      ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
